@@ -11,9 +11,7 @@ import opengl.ubuntu.v20.glut_h;
 /**
  * Enumerate all OpenGL methods available for generated binding.
  *
- * Run me with VM args : <code>
- *     --enable-native-access=ALL-UNNAMED --add-modules jdk.incubator.foreign -Djava.library.path=.:/usr/lib/x86_64-linux-gnu/
- * </code>
+ * Run me with VM args : --enable-preview
  *
  */
 @SuppressWarnings("rawtypes")
